--- a/jdromeda-starter/build.gradle
+++ b/jdromeda-starter/build.gradle
@@ -14,16 +14,13 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    // Currently using the local repo
+    mavenLocal()
 }
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+    api 'jdromeda:core-widgets:0.0.1-SNAPSHOT'
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:23.0'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
 }
 
